2004-12-04  Henrique de Moraes Holschuh <hmh@debian.org>

	* timidity/aRts_a.c (open_output): Fix for gcc >= 3.4.x [timidity-bugs-en:00025]

2004-12-02  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* interface/ncurs_c.c: [timidity-bugs-ja:00118]
	* timidity/timidity.c (list_dyna_interface): bug fix: cmp can be
	  uninitialized

2004-11-03  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/resample.c (rs_vib_bidir): disable PRECALC_LOOPS for
	  this function

2004-11-03  Henrique de Moraes Holschuh <hmh@debian.org>

	* timidity/aRts_a.c: disable aRts auto-detection to avoid
	  segmentation violation

2004-11-03  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (list_dyna_interface): ditto
	* interface/dynamic_c.c (ctl_open): fix compile error

2004-11-03  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c: fix to correctly handle non-linear velocity
	  levels

2004-10-27  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configure, autoconf/utils.m4, doc/{C,ja_JP.eucJP}/readme.dl,
	  interface/Makefile.{am,in}, interface/{dumb,ncurs,slang,motif,tk,
	  emacs,vt100,xaw,xskin,dynamic,mac,gtk,server,alsaseq,w32g,winsyn,
	  portmidisyn}_c.c, timidity/controls.h, timidity/timiidty.c:
	  Fix to fit with case-insensitive file system
	* interface/interface_[nsmkeTaigA].txt: Remove
	* interface/if_{ncurses,slang,motif,tcltk,emacs,vt100,xaw,xskin,
	  gtk,alsaseq}.txt: Add

2004-10-21  Henrique de Moraes Holschuh <hmh@debian.org>

	* timidity/mod2midi.c (Voice_Play, Voice_SetPeriod):
	  improve the code path when period2note returns -1

2004-10-21  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mod2midi.c (period2note):
	  initialize *finetune when returning a bad period
	* timidity/mod2midi.c (load_module_samples):
	  samples without names were causing NULL pointer reads
	* timidity/mod2midi.c (period2note):
	  delete extra \n

2004-10-18  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* libunimod/mlutil.c (getAmigaPeriod): Avoid division by zero